[package]
name = 'cord-primitives'
description = "Generic CORD Primitives."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
sp-core = { features = ["serde"], workspace = true }
sp-runtime = { features = ["serde"], workspace = true }

[features]
default = ["std"]
std = ["sp-core/std", "sp-runtime/std"]
