[package]
name = 'cord-identifier'
description = 'Manage Identifier State.'
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[[package.metadata.docs.rs]]
targets = ['x86_64-unknown-linux-gnu']

[dev-dependencies]
sp-core = { features = ["std"], workspace = true }
sp-keystore = { features = ["std"], workspace = true }
cord-utilities = { features = ["mock"], workspace = true }

[dependencies]
codec = { features = ["derive", "max-encoded-len"], workspace = true }
scale-info = { features = ["derive"], workspace = true }
impl-serde = { optional = true, workspace = true }
primitive-types = { features = ["codec", "scale-info"], workspace = true }
serde = { optional = true, features = ["alloc", "derive"], workspace = true }
bs58 = { optional = true, workspace = true }
blake2 = { optional = true, workspace = true }
sp-crypto-hashing = { workspace = true }
sp-runtime-interface = { workspace = true }
sp-storage = { workspace = true }


# Substrate dependencies
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-core = { optional = true, workspace = true }
sp-io = { optional = true, workspace = true }
sp-keystore = { optional = true, workspace = true }

[features]
default = ['std']
std = [
	"codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
	"sp-io/std",
	"sp-std/std",
	"sp-keystore/std",
	"primitive-types/byteorder",
	"primitive-types/rustc-hex",
	"primitive-types/serde",
	"primitive-types/std",
	"serde/std",
	"sp-crypto-hashing/std",
	"sp-runtime/std",
	"sp-runtime-interface/std",
	"bs58/std",
	"blake2/std",
	"cord-utilities/std",
	"sp-core?/std",
	"sp-storage/std",
]

# Serde support without relying on std features.
serde = [
	"blake2",
	"bs58/alloc",
	"dep:serde",
	"impl-serde",
	"primitive-types/serde_no_std",
	"scale-info/serde",
	"sp-storage/serde",
]


try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"cord-utilities/try-runtime",
	"sp-runtime/try-runtime",
]
