[package]
name = 'cord-loom-runtime'
description = "Loom runtime implementation."
version.workspace = true
authors.workspace = true
build = 'build.rs'
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# third-party dependencies
codec = { features = ["derive", "max-encoded-len"], workspace = true }
scale-info = { features = ["derive", "serde"], workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { features = ["alloc", "arbitrary_precision"], workspace = true }
static_assertions = { workspace = true }
primitive-types = { features = [
	"codec",
	"num-traits",
	"scale-info",
], workspace = true }

# Local
authority-membership = { workspace = true }
cord-primitives = { workspace = true }
identifier = { workspace = true }
network-membership = { workspace = true }
cord-loom-runtime-constants = { workspace = true }
cord-runtime-common = { workspace = true }
cord-uri = { workspace = true }

pallet-council-membership = { workspace = true }
pallet-did = { workspace = true }
pallet-did-name = { workspace = true }
pallet-schema = { workspace = true }
pallet-config = { workspace = true }
pallet-chain-space = { workspace = true }
pallet-cord-statement = { workspace = true }
pallet-namespace = { workspace = true }
pallet-network-membership = { workspace = true }
pallet-runtime-upgrade = { workspace = true }
pallet-cord-identity = { workspace = true }
pallet-cord-offences = { workspace = true }
pallet-cord-node-authorization = { workspace = true }
pallet-network-score = { workspace = true }
pallet-cord-session-benchmarking = { workspace = true }
pallet-registries = { workspace = true }
pallet-entries = { workspace = true }
pallet-schema-accounts = { workspace = true }

# Internal runtime API (with default disabled)
pallet-did-runtime-api = { workspace = true }
pallet-assets-runtime-api = { workspace = true }
pallet-transaction-weight-runtime-api = { workspace = true }

# Substrate
sp-authority-discovery = { features = ["serde"], workspace = true }
sp-consensus-babe = { features = ["serde"], workspace = true }
sp-consensus-beefy = { workspace = true }
sp-consensus-grandpa = { features = ["serde"], workspace = true }
sp-api = { workspace = true }
sp-inherents = { workspace = true }
sp-mmr-primitives = { workspace = true }
sp-offchain = { workspace = true }
sp-std = { workspace = true }
sp-runtime = { features = ["serde"], workspace = true }
sp-staking = { features = ["serde"], workspace = true }
sp-core = { features = ["serde"], workspace = true }
sp-io = { workspace = true }
sp-keyring = { workspace = true }
sp-session = { workspace = true }
sp-statement-store = { workspace = true }
sp-storage = { workspace = true }
sp-version = { features = ["serde"], workspace = true }
sp-transaction-pool = { workspace = true }
sp-block-builder = { workspace = true }
sp-genesis-builder = { workspace = true }

pallet-authority-discovery = { workspace = true }
pallet-assets = { workspace = true }
pallet-asset-conversion = { workspace = true }
pallet-authorship = { workspace = true }
pallet-babe = { workspace = true }
pallet-balances = { workspace = true }
pallet-beefy = { workspace = true }
pallet-beefy-mmr = { workspace = true }
pallet-contracts = { workspace = true }
pallet-collective = { workspace = true }
frame-executive = { workspace = true }
pallet-grandpa = { workspace = true }
pallet-im-online = { workspace = true }
pallet-indices = { workspace = true }
pallet-mmr = { workspace = true }
pallet-multisig = { workspace = true }
pallet-preimage = { workspace = true }
pallet-scheduler = { workspace = true }
pallet-session = { features = ["historical"], workspace = true }
pallet-statement = { workspace = true }

pallet-transaction-payment = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true }
pallet-treasury = { workspace = true }
pallet-root-testing = { workspace = true }
pallet-sudo = { workspace = true }
frame-support = { features = ["experimental", "tuples-96"], workspace = true }
frame-system = { workspace = true }
frame-system-rpc-runtime-api = { workspace = true }
frame-metadata-hash-extension = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-utility = { workspace = true }
pallet-remark = { workspace = true }
pallet-insecure-randomness-collective-flip = { workspace = true }
hex-literal = { workspace = true, optional = true }

frame-benchmarking = { workspace = true, optional = true }
frame-system-benchmarking = { workspace = true, optional = true }
frame-try-runtime = { workspace = true, optional = true }

[dev-dependencies]
sp-staking = { workspace = true }

[build-dependencies]
substrate-wasm-builder = { workspace = true, optional = true, default-features = true }

[features]
default = ['std']
std = [
	"sp-authority-discovery/std",
	"cord-primitives/std",
	"cord-runtime-common/std",
	"cord-uri/std",
	"network-membership/std",
	"authority-membership/std",
	"frame-system-benchmarking?/std",
	"frame-metadata-hash-extension/std",
	"codec/std",
	"scale-info/std",
	"serde/std",
	"serde_json/std",
	"identifier/std",
	"sp-inherents/std",
	"sp-core/std",
	"sp-api/std",
	"sp-transaction-pool/std",
	"sp-block-builder/std",
	"sp-offchain/std",
	"sp-std/std",
	"frame-support/std",
	"frame-benchmarking/std",
	"frame-executive/std",
	"pallet-asset-conversion/std",
	"pallet-assets/std",
	"pallet-authority-discovery/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"pallet-beefy/std",
	"pallet-beefy-mmr/std",
	"pallet-config/std",
	"pallet-collective/std",
	"pallet-contracts/std",
	"pallet-grandpa/std",
	"pallet-cord-identity/std",
	"pallet-im-online/std",
	"pallet-indices/std",
	"pallet-insecure-randomness-collective-flip/std",
	"pallet-council-membership/std",
	"pallet-mmr/std",
	"pallet-multisig/std",
	"pallet-cord-offences/std",
	"pallet-preimage/std",
	"pallet-scheduler/std",
	"pallet-cord-session-benchmarking/std",
	"pallet-session/std",
	"pallet-statement/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-treasury/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-utility/std",
	"pallet-babe/std",
	"pallet-remark/std",
	"pallet-did/std",
	"pallet-did-name/std",
	"pallet-schema/std",
	"pallet-chain-space/std",
	"pallet-cord-statement/std",
	"pallet-namespace/std",
	"pallet-network-score/std",
	"pallet-network-membership/std",
	"pallet-runtime-upgrade/std",
	"pallet-assets-runtime-api/std",
	"pallet-did-runtime-api/std",
	"pallet-cord-node-authorization/std",
	"pallet-registries/std",
	"pallet-entries/std",
	"pallet-schema-accounts/std",
	"pallet-transaction-weight-runtime-api/std",
	"sp-runtime/std",
	"sp-staking/std",
	"frame-system/std",
	"frame-system-rpc-runtime-api/std",
	"sp-version/std",
	"log/std",
	"sp-consensus-babe/std",
	"sp-consensus-beefy/std",
	"sp-consensus-grandpa/std",
	"sp-genesis-builder/std",
	"sp-mmr-primitives/std",
	"sp-session/std",
	"sp-statement-store/std",
	"sp-storage/std",
	"cord-loom-runtime-constants/std",
	"substrate-wasm-builder",
	"frame-try-runtime?/std",
	"primitive-types/std",
	"sp-io/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"sp-staking/runtime-benchmarks",
	"pallet-babe/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-beefy-mmr/runtime-benchmarks",
	"pallet-collective/runtime-benchmarks",
	"pallet-contracts/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-cord-identity/runtime-benchmarks",
	"pallet-im-online/runtime-benchmarks",
	"pallet-indices/runtime-benchmarks",
	"pallet-council-membership/runtime-benchmarks",
	"pallet-mmr/runtime-benchmarks",
	"pallet-multisig/runtime-benchmarks",
	"pallet-cord-offences/runtime-benchmarks",
	"pallet-preimage/runtime-benchmarks",
	"pallet-scheduler/runtime-benchmarks",
	"pallet-cord-session-benchmarking/runtime-benchmarks",
	"pallet-remark/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",
	"pallet-did/runtime-benchmarks",
	"pallet-did-name/runtime-benchmarks",
	"pallet-schema/runtime-benchmarks",
	"pallet-cord-statement/runtime-benchmarks",
	"pallet-chain-space/runtime-benchmarks",
	"pallet-namespace/runtime-benchmarks",
	"pallet-network-membership/runtime-benchmarks",
	"hex-literal",
	"pallet-sudo/runtime-benchmarks",
	"pallet-network-score/runtime-benchmarks",
	"authority-membership/runtime-benchmarks",
	"cord-runtime-common/runtime-benchmarks",
	"pallet-asset-conversion/runtime-benchmarks",
	"pallet-assets/runtime-benchmarks",
	"pallet-config/runtime-benchmarks",
	"pallet-treasury/runtime-benchmarks",
	"pallet-registries/runtime-benchmarks",
]

try-runtime = [
	"frame-executive/try-runtime",
	"frame-try-runtime",
	"frame-system/try-runtime",
	"frame-support/try-runtime",
	"pallet-asset-conversion/try-runtime",
	"pallet-assets/try-runtime",
	"pallet-authority-discovery/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-beefy-mmr/try-runtime",
	"pallet-beefy/try-runtime",
	"pallet-collective/try-runtime",
	"pallet-contracts/try-runtime",
	"pallet-grandpa/try-runtime",
	"pallet-cord-identity/try-runtime",
	"pallet-im-online/try-runtime",
	"pallet-indices/try-runtime",
	"pallet-insecure-randomness-collective-flip/try-runtime",
	"pallet-council-membership/try-runtime",
	"pallet-mmr/try-runtime",
	"pallet-multisig/try-runtime",
	"pallet-cord-offences/try-runtime",
	"pallet-preimage/try-runtime",
	"pallet-scheduler/try-runtime",
	"pallet-cord-session-benchmarking/try-runtime",
	"pallet-session/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-treasury/try-runtime",
	"pallet-utility/try-runtime",
	"pallet-babe/try-runtime",
	"pallet-schema/try-runtime",
	"pallet-chain-space/try-runtime",
	"pallet-cord-statement/try-runtime",
	"pallet-namespace/try-runtime",
	"pallet-did/try-runtime",
	"pallet-did-name/try-runtime",
	"pallet-network-score/try-runtime",
	"pallet-cord-node-authorization/try-runtime",
	"pallet-network-membership/try-runtime",
	"pallet-runtime-upgrade/try-runtime",
	"pallet-remark/try-runtime",
	"pallet-registries/try-runtime",
	"pallet-entries/try-runtime",
	"pallet-schema-accounts/try-runtime",
	"cord-runtime-common/try-runtime",
	"authority-membership/try-runtime",
	"identifier/try-runtime",
	"frame-try-runtime/try-runtime",
	"pallet-config/try-runtime",
	"sp-runtime/try-runtime",
]


# Set timing constants (e.g. session period) to faster versions to speed up testing.
fast-runtime = []

# A feature that should be enabled when the runtime should be build for on-chain
# deployment. This will disable stuff that shouldn't be part of the on-chain wasm
# to make it smaller like logging for example.
on-chain-release-build = ["metadata-hash", "sp-api/disable-logging"]

metadata-hash = ["substrate-wasm-builder/metadata-hash"]
